--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
   <style>
       .swiper-slide {position: relative;}
+      .best-sell .cover {border: 3px solid rgb(240, 232, 9);}
       .swiper-slide .txt {
           position: absolute; width: 200px; top: 50%; right: 30px; 
           transform: translate(0,-50%);
@@ -67,7 +68,6 @@
                                 <p class="text-center">프로방스 요정들의 여정을 따라 만들어진 마법 같은 2021 리미티드 홀리데이 에디션</p>
                                 <a href="#">자세히 보기</a>
                             </div>
-                            <div class="cover"></div>
                             <img src="images/Untitled-1.png" alt="" class="img-fluid">
                         </div>
                         <div class="swiper-slide">
@@ -76,7 +76,6 @@
                                 <p class="text-center">반복된 일상에 지친 몸과 마음을 리셋 시켜줄 록시땅 스테이 전시를 만나보세요.</p>
                                 <a href="#">자세히 보기</a>
                             </div>
-                            <div class="cover"></div>
                             <img src="images/net1 (33).jpg" alt="" class="img-fluid">
                         </div>
                     </div>
@@ -90,21 +89,22 @@
         <div class="container">
             <h5 class="text-left">베스트 셀러</h5>
             <div class="row">
-                <div class="col-md-10 d-flex">
-                    <img src="images/bestsell.png" alt="" width="200px">
+                <div class="col-lg-10 d-flex col-md-5">
+                    <img src="images/bestsell.png" alt="" width="500px" class="img-fluid">
                     <div class="txt">
                         <div class="t1">
                             <h6 class="text-center">NEW 이모르뗄 리셋 세럼</h6>
                             <p>10배 더 농축된 이모르뗄 에센셜 오일을 담은 NEW 리셋 세럼은 강력한 *항산화 효과로 피부 에너지 회복을 도와줍니다.</p>
-                            <h6>*해당 원료 인비트로 테스트 결과</h6>
+                            <h6 class="text-center mb-3">*해당 원료 인비트로 테스트 결과</h6>
                             <a href="#">구매하기</a>
                         </div>
-                        <div class="t2">
-                            <h5>NEW 이모르뗄 오버나이트 리셋 오일 인 세럼 50ml</h5>
+                        <div class="t2 py-5">
+                            <h6 class="text-center">NEW 이모르뗄 오버나이트 리셋 오일 인 세럼 50ml</h6>
                             <p>￦123,000</p>
                             <img src="images/image 4.png" alt="">
                             <a href="#">구매하기</a>
                         </div>
+                        <div class="cover"></div>
                     </div>
                     
                 </div>
