--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/reset.css">
   <style>
       .swiper-slide {position: relative;}
-      .best-sell .cover {border: 3px solid rgb(240, 232, 9);}
+      .best-sell .t2 {position: relative;}
+      .best-sell .cover {border: 3px solid rgb(240, 232, 9);width: 600px;height: 200px;position: absolute;top: 30px;right: 20px;}
       .swiper-slide .txt {
           position: absolute; width: 200px; top: 50%; right: 30px; 
           transform: translate(0,-50%);
@@ -57,6 +58,14 @@
             </nav>     
         </div>
     </header>
+    <div class="row">
+        <div class="col-xl-12 mb-2 mb-xl-0">
+            <div class="video">
+                <h2 class="txt text-white">얼그레이 티의 은은함을 담은 시어 베르가못 에디션</h2>
+                <video src="https://www.youtube.com/watch?v=ancaS9eoVxo" autoplay muted loop></video>
+            </div>
+        </div>
+    </div>
     <div class="slider mb-2">
         <div class="container">
             <div class="row">
@@ -100,11 +109,11 @@
                         </div>
                         <div class="t2 py-5">
                             <h6 class="text-center">NEW 이모르뗄 오버나이트 리셋 오일 인 세럼 50ml</h6>
-                            <p>￦123,000</p>
                             <img src="images/image 4.png" alt="">
                             <a href="#">구매하기</a>
+                            <div class="cover"></div>
                         </div>
-                        <div class="cover"></div>
+                        
                     </div>
                     
                 </div>
