--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css">
   <style>
+      .video {}
       .swiper-slide {position: relative;}
       .best-sell .t2 {position: relative;}
       .best-sell .cover {border: 3px solid rgb(240, 232, 9);width: 600px;height: 200px;position: absolute;top: 30px;right: 20px;}
@@ -129,6 +130,11 @@
                     </div></div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="gift-best">
+        <div class="container">
+            <h5 class="text-left">기프트 세트 베스트셀러</h5>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
