--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -59,14 +59,6 @@
             </nav>     
         </div>
     </header>
-    <div class="row">
-        <div class="col-xl-12 mb-2 mb-xl-0">
-            <div class="video">
-                <h2 class="txt text-white">얼그레이 티의 은은함을 담은 시어 베르가못 에디션</h2>
-                <video src="https://www.youtube.com/watch?v=ancaS9eoVxo" autoplay muted loop></video>
-            </div>
-        </div>
-    </div>
     <div class="slider mb-2">
         <div class="container">
             <div class="row">
@@ -92,6 +84,36 @@
                 </div>
                 <div class="swiper-next d-none d-md-block"></div>
                 <div class="swiper-prev d-none d-md-block"></div>
+            </div>
+        </div>
+    </div>
+    <div class="map">
+        <div class="container">
+            <h5 class="text-left">가까운 매장 찾기</h5>
+            <div class="row">
+                <div class="col-10">
+                    <!--
+	* 카카오맵 - 약도서비스
+	* 한 페이지 내에 약도를 2개 이상 넣을 경우에는
+	* 약도의 수 만큼 소스를 새로 생성, 삽입해야 합니다.
+-->
+<!-- 1. 약도 노드 -->
+<div id="daumRoughmapContainer1635489226571" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+
+<!-- 2. 설치 스크립트 -->
+<script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+
+<!-- 3. 실행 스크립트 -->
+<script charset="UTF-8">
+	new daum.roughmap.Lander({
+		"timestamp" : "1635489226571",
+		"key" : "27umn",
+		"mapWidth" : "1140",
+		"mapHeight" : "360"
+	}).render();
+</script>
+                    </div></div>
+                </div>
             </div>
         </div>
     </div>
@@ -121,22 +143,21 @@
             </div>
         </div>
     </div>
-    <div class="map">
-        <div class="container">
-            <h5 class="text-left">가까운 매장 찾기</h5>
-            <div class="row">
-                <div class="col-10">
-                    <a href="https://map.kakao.com/?urlX=533212&urlY=1132760&urlLevel=10&map_type=TYPE_MAP&map_hybrid=false" target="_blank"><img width="504" height="310" src="https://map2.daum.net/map/mapservice?FORMAT=PNG&SCALE=320&MX=533212&MY=1132760&S=0&IW=504&IH=310&LANG=0&COORDSTM=WCONGNAMUL&logo=kakao_logo" style="border:1px solid #ccc"></a><div class="hide" style="overflow:hidden;padding:7px 11px;border:1px solid #dfdfdf;border-color:rgba(0,0,0,.1);border-radius:0 0 2px 2px;background-color:#f9f9f9;width:482px;"><strong style="float: left;"><img src="//t1.daumcdn.net/localimg/localimages/07/2018/pc/common/logo_kakaomap.png" width="72" height="16" alt="카카오맵"></strong><div style="float: right;position:relative"><a style="font-size:12px;text-decoration:none;float:left;height:15px;padding-top:1px;line-height:15px;color:#000" target="_blank" href="https://map.kakao.com/?urlX=533212&urlY=1132760&urlLevel=10&map_type=TYPE_MAP&map_hybrid=false">지도 크게 보기</a>
-                    </div></div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="gift-best">
         <div class="container">
             <h5 class="text-left">기프트 세트 베스트셀러</h5>
         </div>
     </div>
+    <div class="box row">
+        <div class="col-xl-12 mb-2 mb-xl-0">
+            <div class="video">
+                <h2 class="txt text-white">록시땅의 친환경 ECO MERCI 박스</h2>
+                <p class="text-center">록시땅 공식몰에서 주문하신 제품은 플라스틱 테이프와 완충제를 사용하지 않아 박스부터 포장지까지 100% 재활용이 가능한 포장박스로 배송됩니다.</p>
+                <video src="https://www.youtube.com/watch?v=ancaS9eoVxo" autoplay muted loop></video>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.min.js" integrity="sha512-bPNHwutl0bNsjHtw+AtR2xvp0BLtpm9mN6LcqzDZifcQSYv/dPVvND245WZVst+m7GhYHX647RoaL9w6VVraxw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
