--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -23,7 +23,8 @@
       .best-sell .txt {padding: 20px;}
       .best-sell .txt p {width: 500px;}
       .best-sell .txt a {background: rgb(250, 213, 0);padding: 5px 10px;font-size: 12px;}
-      .gift-best img {width: calc( 1100px / 4 );margin-right: 10px;}
+      .gift-best img {width: calc( 1100px / 4 );margin-right: 5px;}
+      .gift-best .g1 a {background: rgb(248, 175, 17); font-size: 13px; padding: 2px 10px;}
   </style>
 </head>
 <body>
@@ -138,22 +139,26 @@
         <div class="container">
             <h5 class="text-center">기프트 세트 베스트셀러</h5>
             <div class="row">
-                <div class="col-md-3 d-flex">
-                    <g1>
+                <div class="col-md-3">
+                    <div class="g1">
                         <img src="images/best-gift.png" alt="">
                         <p class="text-center">[기프트] 필로우 미스트 세트(미니시어 핸드크림 증정)</p>
+                        <a href="#">구매하기</a>
                     </g1>
                     <div class="g1">
                         <img src="images/best-gift2.png" alt="">
                         <p class="text-center">[기프트] 홈 퓨리파잉 미스트 세트(홈 타블렛 증정)</p>
+                        <a href="#">구매하기</a>
                     </div>
                     <div class="g1">
                         <img src="images/best-gift3.png" alt="">
                         <p class="text-center">[기프트] 클린핸드 시어 버베나 핸드 앤 바디 듀오 세트</p>
+                        <a href="#">구매하기</a>
                     </div>
                     <div class="g1">
                         <img src="images/best-gift4.png" alt="">
                         <p class="text-center">[기프트] 클린핸드 시어 핸드 앤 바디 듀오 세트</p>
+                        <a href="#">구매하기</a>
                     </div>
                 </div>
             </div>
