--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -138,7 +138,7 @@
     <div class="gift-best">
         <div class="container">
             <h5 class="text-center">기프트 세트 베스트셀러</h5>
-            <div class="row">
+            <div class="row ">
                 <div class="col-md-3">
                     <div class="g1">
                         <img src="images/best-gift.png" alt="">
@@ -164,7 +164,53 @@
             </div>
         </div>
     </div>
-    <div class="box row">
+    <div class="pruduct">
+        <div class="container">
+            <h5 class="text-center slider-title mb-3">라인별 컬렉션</h5>
+            <div class="row">
+                <div class="swiper-container swiper col-md-10 offset-md-1">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="s1">
+                                <div class="txt">
+                                    <h4 class="text-center">시어 버터 컬렉션</h4>
+                                    <a href="#">자세히 보기</a>
+                                </div>
+                                <img src="images/image 5.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="s2">
+                                <div class="txt">
+                                    <h4 class="text-center">이모르뗄 리셋 컬</h4>
+                                    <a href="#">자세히 보기</a>
+                                </div>
+                                <img src="images/image 6.png" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide d-flex">
+                            <div class="s1">
+                                <div class="txt">
+                                    <h4 class="text-center">시어 버터 컬렉션</h4>
+                                    <a href="#">자세히 보기</a>
+                                </div>
+                                <img src="images/image 5.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="s2">
+                                <div class="txt">
+                                    <h4 class="text-center">이모르뗄 리셋 컬</h4>
+                                    <a href="#">자세히 보기</a>
+                                </div>
+                                <img src="images/image 6.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="swiper-next d-none d-md-block"></div>
+                <div class="swiper-prev d-none d-md-block"></div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="box row">
         <div class="col-xl-12 mb-2 mb-xl-0">
             <div class="video">
                 <h2 class="txt text-white">록시땅의 친환경 ECO MERCI 박스</h2>
@@ -172,7 +218,7 @@
                 <video src="https://www.youtube.com/watch?v=ancaS9eoVxo" autoplay muted loop></video>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
