--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -138,13 +138,13 @@
     <div class="gift-best">
         <div class="container">
             <h5 class="text-center">기프트 세트 베스트셀러</h5>
-            <div class="row ">
+            <div class="row">
                 <div class="col-md-3">
                     <div class="g1">
                         <img src="images/best-gift.png" alt="">
                         <p class="text-center">[기프트] 필로우 미스트 세트(미니시어 핸드크림 증정)</p>
                         <a href="#">구매하기</a>
-                    </g1>
+                    </div>
                     <div class="g1">
                         <img src="images/best-gift2.png" alt="">
                         <p class="text-center">[기프트] 홈 퓨리파잉 미스트 세트(홈 타블렛 증정)</p>
@@ -170,8 +170,52 @@
             <div class="row">
                 <div class="swiper-container swiper col-md-10 offset-md-1">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
+                        <div class="swiper-slide d-flex">
                             <div class="s1">
+                                <div class="txt">
+                                    <h4 class="text-center">시어 버터 컬렉션</h4>
+                                    <a href="#">자세히 보기</a>
+                                </div>
+                                <img src="images/image 5.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="s2">
+                                <div class="txt">
+                                    <h4 class="text-center">이모르뗄 리셋 컬</h4>
+                                    <a href="#">자세히 보기</a>
+                                </div>
+                                <img src="images/image 6.png" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide d-flex">
+                            <div class="s1">
+                                <div class="txt">
+                                    <h4 class="text-center">시어 버터 컬렉션</h4>
+                                    <a href="#">자세히 보기</a>
+                                </div>
+                                <img src="images/image 5.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="s2">
+                                <div class="txt">
+                                    <h4 class="text-center">이모르뗄 리셋 컬</h4>
+                                    <a href="#">자세히 보기</a>
+                                </div>
+                                <img src="images/image 6.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="swiper-next d-none d-md-block"></div>
+                <div class="swiper-prev d-none d-md-block"></div>
+            </div>
+        </div>
+        <div class="container">
+            <h5 class="text-center slider-title mb-3">주제별 컬렉션</h5>
+            <div class="row">
+                <div class="swiper-container swiper col-md-10 offset-md-1">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide d-flex">
+                            <div class="s1 px-5">
                                 <div class="txt">
                                     <h4 class="text-center">시어 버터 컬렉션</h4>
                                     <a href="#">자세히 보기</a>
