--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -25,6 +25,9 @@
       .best-sell .txt a {background: rgb(250, 213, 0);padding: 5px 10px;font-size: 12px;}
       .gift-best img {width: calc( 1100px / 4 );margin-right: 5px;}
       .gift-best .g1 a {background: rgb(248, 175, 17); font-size: 13px; padding: 2px 10px;}
+      .product .txt {padding: 20px;}
+      .product .swiper-slide{position: relative;}
+      .product .swiper-slide .txt {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);}
   </style>
 </head>
 <body>
@@ -164,90 +167,54 @@
             </div>
         </div>
     </div>
-    <div class="pruduct">
+    <div class="product mb-2">
         <div class="container">
-            <h5 class="text-center slider-title mb-3">라인별 컬렉션</h5>
+            <h5>라인별 컬렉션</h5>
             <div class="row">
-                <div class="swiper-container swiper col-md-10 offset-md-1">
+                <div class="swiper-container swiper col-md-12">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide d-flex">
-                            <div class="s1">
-                                <div class="txt">
-                                    <h4 class="text-center">시어 버터 컬렉션</h4>
-                                    <a href="#">자세히 보기</a>
-                                </div>
-                                <img src="images/image 5.png" alt="" class="img-fluid">
+                        <div class="swiper-slide">
+                            <div class="txt">
+                                <h4 class="text-center">시어 버터 컬렉션</h4>
+                                <a href="#">자세히 보기</a>
                             </div>
-                            <div class="s2">
-                                <div class="txt">
-                                    <h4 class="text-center">이모르뗄 리셋 컬</h4>
-                                    <a href="#">자세히 보기</a>
-                                </div>
-                                <img src="images/image 6.png" alt="">
-                            </div>
+                            <img src="images/image 5.png" alt="" class="img-fluid" width="800px">
                         </div>
-                        <div class="swiper-slide d-flex">
-                            <div class="s1">
-                                <div class="txt">
-                                    <h4 class="text-center">시어 버터 컬렉션</h4>
-                                    <a href="#">자세히 보기</a>
-                                </div>
-                                <img src="images/image 5.png" alt="" class="img-fluid">
+                        <div class="swiper-slide">
+                            <div class="txt">
+                                <h4 class="text-center">록시땅 스테이전시</h4>
+                                <p class="text-center">반복된 일상에 지친 몸과 마음을 리셋 시켜줄 록시땅 스테이 전시를 만나보세요.</p>
+                                <a href="#">자세히 보기</a>
                             </div>
-                            <div class="s2">
-                                <div class="txt">
-                                    <h4 class="text-center">이모르뗄 리셋 컬</h4>
-                                    <a href="#">자세히 보기</a>
-                                </div>
-                                <img src="images/image 6.png" alt="">
-                            </div>
+                            <img src="images/image 6.png" alt="" class="img-fluid" width="800px">
                         </div>
                     </div>
-                    
                 </div>
                 <div class="swiper-next d-none d-md-block"></div>
                 <div class="swiper-prev d-none d-md-block"></div>
             </div>
         </div>
         <div class="container">
-            <h5 class="text-center slider-title mb-3">주제별 컬렉션</h5>
+            <h5>주제별 컬렉션</h5>
             <div class="row">
-                <div class="swiper-container swiper col-md-10 offset-md-1">
+                <div class="swiper-container swiper col-md-12">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide d-flex">
-                            <div class="s1 px-5">
-                                <div class="txt">
-                                    <h4 class="text-center">시어 버터 컬렉션</h4>
-                                    <a href="#">자세히 보기</a>
-                                </div>
-                                <img src="images/image 5.png" alt="" class="img-fluid">
+                        <div class="swiper-slide">
+                            <div class="txt">
+                                <h4 class="text-center">바디 & 핸드케어</h4>
+                                <a href="#">자세히 보기</a>
                             </div>
-                            <div class="s2">
-                                <div class="txt">
-                                    <h4 class="text-center">이모르뗄 리셋 컬</h4>
-                                    <a href="#">자세히 보기</a>
-                                </div>
-                                <img src="images/image 6.png" alt="">
-                            </div>
+                            <img src="images/image 7.png" alt="" class="img-fluid" width="800px">
                         </div>
-                        <div class="swiper-slide d-flex">
-                            <div class="s1">
-                                <div class="txt">
-                                    <h4 class="text-center">시어 버터 컬렉션</h4>
-                                    <a href="#">자세히 보기</a>
-                                </div>
-                                <img src="images/image 5.png" alt="" class="img-fluid">
+                        <div class="swiper-slide">
+                            <div class="txt">
+                                <h4 class="text-center">스킨 & 립케어</h4>
+                                <p class="text-center">반복된 일상에 지친 몸과 마음을 리셋 시켜줄 록시땅 스테이 전시를 만나보세요.</p>
+                                <a href="#">자세히 보기</a>
                             </div>
-                            <div class="s2">
-                                <div class="txt">
-                                    <h4 class="text-center">이모르뗄 리셋 컬</h4>
-                                    <a href="#">자세히 보기</a>
-                                </div>
-                                <img src="images/image 6.png" alt="">
-                            </div>
+                            <img src="images/image 8.png" alt="" class="img-fluid" width="800px">
                         </div>
                     </div>
-                    
                 </div>
                 <div class="swiper-next d-none d-md-block"></div>
                 <div class="swiper-prev d-none d-md-block"></div>
