--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -25,7 +25,8 @@
       .best-sell .txt a {background: rgb(250, 213, 0);padding: 5px 10px;font-size: 12px;}
       .gift-best img {width: calc( 1100px / 4 );margin-right: 5px;}
       .gift-best .g1 a {background: rgb(248, 175, 17); font-size: 13px; padding: 2px 10px;}
-      .product .txt {padding: 20px;}
+      .product {transform: translateX(30px);}
+      .product .txt {padding: 2px 20px;}
       .product .swiper-slide{position: relative;}
       .product .swiper-slide .txt {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);}
   </style>
@@ -138,7 +139,7 @@
             </div>
         </div>
     </div>
-    <div class="gift-best">
+    <div class="gift-best mb-5">
         <div class="container">
             <h5 class="text-center">기프트 세트 베스트셀러</h5>
             <div class="row">
@@ -169,8 +170,8 @@
     </div>
     <div class="product mb-2">
         <div class="container">
-            <h5>라인별 컬렉션</h5>
-            <div class="row">
+            <h5 class="mb-3">라인별 컬렉션</h5>
+            <div class="row mb-3">
                 <div class="swiper-container swiper col-md-12">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -178,7 +179,7 @@
                                 <h4 class="text-center">시어 버터 컬렉션</h4>
                                 <a href="#">자세히 보기</a>
                             </div>
-                            <img src="images/image 5.png" alt="" class="img-fluid" width="800px">
+                            <img src="images/image 5.png" alt="" class="img-fluid" width="900px">
                         </div>
                         <div class="swiper-slide">
                             <div class="txt">
@@ -186,7 +187,7 @@
                                 <p class="text-center">반복된 일상에 지친 몸과 마음을 리셋 시켜줄 록시땅 스테이 전시를 만나보세요.</p>
                                 <a href="#">자세히 보기</a>
                             </div>
-                            <img src="images/image 6.png" alt="" class="img-fluid" width="800px">
+                            <img src="images/image 6.png" alt="" class="img-fluid" width="900px">
                         </div>
                     </div>
                 </div>
@@ -195,7 +196,7 @@
             </div>
         </div>
         <div class="container">
-            <h5>주제별 컬렉션</h5>
+            <h5 class="mb-3">주제별 컬렉션</h5>
             <div class="row">
                 <div class="swiper-container swiper col-md-12">
                     <div class="swiper-wrapper">
@@ -204,7 +205,7 @@
                                 <h4 class="text-center">바디 & 핸드케어</h4>
                                 <a href="#">자세히 보기</a>
                             </div>
-                            <img src="images/image 7.png" alt="" class="img-fluid" width="800px">
+                            <img src="images/image 7.png" alt="" class="img-fluid" width="900px">
                         </div>
                         <div class="swiper-slide">
                             <div class="txt">
@@ -212,7 +213,7 @@
                                 <p class="text-center">반복된 일상에 지친 몸과 마음을 리셋 시켜줄 록시땅 스테이 전시를 만나보세요.</p>
                                 <a href="#">자세히 보기</a>
                             </div>
-                            <img src="images/image 8.png" alt="" class="img-fluid" width="800px">
+                            <img src="images/image 8.png" alt="" class="img-fluid" width="900px">
                         </div>
                     </div>
                 </div>
@@ -221,15 +222,15 @@
             </div>
         </div>
     </div>
-    <!-- <div class="box row">
+    <div class="box row">
         <div class="col-xl-12 mb-2 mb-xl-0">
             <div class="video">
                 <h2 class="txt text-white">록시땅의 친환경 ECO MERCI 박스</h2>
                 <p class="text-center">록시땅 공식몰에서 주문하신 제품은 플라스틱 테이프와 완충제를 사용하지 않아 박스부터 포장지까지 100% 재활용이 가능한 포장박스로 배송됩니다.</p>
-                <video src="https://www.youtube.com/watch?v=ancaS9eoVxo" autoplay muted loop></video>
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/3tCsGVzxW70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay muted loop></iframe>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
