--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -29,6 +29,7 @@
       .product .txt {padding: 2px 20px;}
       .product .swiper-slide{position: relative;}
       .product .swiper-slide .txt {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);}
+      .video {transform: translateX(30%);}
   </style>
 </head>
 <body>
@@ -108,7 +109,8 @@
 		"mapHeight" : "360"
 	}).render();
 </script>
-                    </div></div>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
@@ -143,7 +145,7 @@
         <div class="container">
             <h5 class="text-center">기프트 세트 베스트셀러</h5>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 d-flex">
                     <div class="g1">
                         <img src="images/best-gift.png" alt="">
                         <p class="text-center">[기프트] 필로우 미스트 세트(미니시어 핸드크림 증정)</p>
