--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -149,21 +149,29 @@
                     <div class="g1">
                         <img src="images/best-gift.png" alt="">
                         <p class="text-center">[기프트] 필로우 미스트 세트(미니시어 핸드크림 증정)</p>
+                        <div class="star text-center">🟡🟡🟡🟡🟡</div>
+                        <p>\30,000</p>
                         <a href="#">구매하기</a>
                     </div>
                     <div class="g1">
                         <img src="images/best-gift2.png" alt="">
                         <p class="text-center">[기프트] 홈 퓨리파잉 미스트 세트(홈 타블렛 증정)</p>
+                        <div class="star text-center">🟡🟡🟡🟡🟡</div>
+                        <p>\30,000</p>
                         <a href="#">구매하기</a>
                     </div>
                     <div class="g1">
                         <img src="images/best-gift3.png" alt="">
                         <p class="text-center">[기프트] 클린핸드 시어 버베나 핸드 앤 바디 듀오 세트</p>
+                        <div class="star text-center">🟡🟡🟡🟡🟡</div>
+                        <p>\67,000</p>
                         <a href="#">구매하기</a>
                     </div>
                     <div class="g1">
                         <img src="images/best-gift4.png" alt="">
                         <p class="text-center">[기프트] 클린핸드 시어 핸드 앤 바디 듀오 세트</p>
+                        <div class="star text-center">🟡🟡🟡🟡🟡</div>
+                        <p>\67,000</p>
                         <a href="#">구매하기</a>
                     </div>
                 </div>
@@ -229,7 +237,7 @@
             <div class="video">
                 <h2 class="txt text-white">록시땅의 친환경 ECO MERCI 박스</h2>
                 <p class="text-center">록시땅 공식몰에서 주문하신 제품은 플라스틱 테이프와 완충제를 사용하지 않아 박스부터 포장지까지 100% 재활용이 가능한 포장박스로 배송됩니다.</p>
-                <iframe width="853" height="480" src="https://www.youtube.com/embed/3tCsGVzxW70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay muted loop></iframe>
+                <iframe width="1140" height="480" src="https://www.youtube.com/embed/3tCsGVzxW70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay muted loop></iframe>
             </div>
         </div>
     </div>
