--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -235,7 +235,7 @@
     <div class="box row">
         <div class="col-xl-12 mb-2 mb-xl-0">
             <div class="video">
-                <h2 class="txt text-white">록시땅의 친환경 ECO MERCI 박스</h2>
+                <h2 class="txt text-center">록시땅의 친환경 ECO MERCI 박스</h2>
                 <p class="text-center">록시땅 공식몰에서 주문하신 제품은 플라스틱 테이프와 완충제를 사용하지 않아 박스부터 포장지까지 100% 재활용이 가능한 포장박스로 배송됩니다.</p>
                 <iframe width="1140" height="480" src="https://www.youtube.com/embed/3tCsGVzxW70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay muted loop></iframe>
             </div>
