--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -98,7 +98,7 @@
         <div class="container">
             <h5 class="text-left">가까운 매장 찾기</h5>
             <div class="row">
-                <div class="col-10">
+                <div class="col-sm-10 offset-md-1">
 <div id="daumRoughmapContainer1635489226571" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
 <script charset="UTF-8">
