--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -30,6 +30,9 @@
       .product .swiper-slide{position: relative;}
       .product .swiper-slide .txt {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);}
       .video {transform: translateX(30%);}
+      .aside p {font-size: 10px;}
+      #footer li {font-size: 12px;}
+      #footer li a {display: block;}
   </style>
 </head>
 <body>
@@ -232,16 +235,54 @@
             </div>
         </div>
     </div>
-    <div class="box row">
-        <div class="col-xl-12 mb-2 mb-xl-0">
+    <div class="box row mb-5">
+        <div class="col-md-10 offset-md-1">
             <div class="video">
+                <video src="https://youtu.be/jR_7ordoU1Y"></video>
                 <h2 class="txt text-center">록시땅의 친환경 ECO MERCI 박스</h2>
                 <p class="text-center">록시땅 공식몰에서 주문하신 제품은 플라스틱 테이프와 완충제를 사용하지 않아 박스부터 포장지까지 100% 재활용이 가능한 포장박스로 배송됩니다.</p>
-                <iframe width="1140" height="480" src="https://www.youtube.com/embed/3tCsGVzxW70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay muted loop></iframe>
             </div>
         </div>
     </div>
-
+    <div class="aside">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1 d-flex text-center">
+                    <p class="pr-3"> INIPAY 에스크로 가입 확인
+                        록시땅 공식몰(kr.loccitane.com)은 귀하의 결제 정보 보안을 최상의 상태로 유지하기 위하여,
+                        결제 시, (주)이니시스의 결제대금 예치서비스인 에스크로 서비스를 제공하고 있습니다.
+                        -
+                        결제대금예치업 등록번호 : 02-006-00013
+                        통신판매번호 :  2008-서울강남-0844</p>
+                    <p class="pr-3">록시땅 공식몰 회원 5% 할인 혜택
+                        록시땅 코리아 공식몰에 가입하여 구매하시는 모든 분들께 5% 할인 혜택을 상시 제공하고 있습니다.
+                        공식몰에서만 진행되는 특별 프로모션도 놓치지 마세요.</p>
+                    <p>고객 문의
+                        록시땅 대표전화 : (02) 2054-0500
+                        록시땅 대표메일 :loccitane@loccitane.co.kr
+                        록시땅 플러스친구: @록시땅
+                        *업무 시간: 평일 오전 10시~오후 5시, 공휴일 제외
+                        결제 문의 : 1588-4954</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="d-flex justify-content-center">
+                        <li class="px-3"><a href="#">사이트 맵</a></li>
+                        <li class="px-3"><a href="#">이용약관</a></li>
+                        <li class="px-3"><a href="#">개인정보처리방침</a></li>
+                        <li class="px-3"><a href="#">International L'OCCITANE</a></li>
+                        <li class="px-3"><a href="#">에스크로 가입 확인</a></li>
+                    </ul>
+                </div>
+            </div>
+            <img src="images/logo.PNG" alt="">
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.min.js" integrity="sha512-bPNHwutl0bNsjHtw+AtR2xvp0BLtpm9mN6LcqzDZifcQSYv/dPVvND245WZVst+m7GhYHX647RoaL9w6VVraxw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
