--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -33,6 +33,8 @@
       .aside p {font-size: 10px;}
       #footer li {font-size: 12px;}
       #footer li a {display: block;}
+      #footer img {transform: translateX(50%); left: 50%;}
+      #footer p {font-size: 10px;}  
   </style>
 </head>
 <body>
@@ -102,14 +104,24 @@
             <h5 class="text-left">가까운 매장 찾기</h5>
             <div class="row">
                 <div class="col-sm-10 offset-md-1">
-<div id="daumRoughmapContainer1635489226571" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+<!--
+	* 카카오맵 - 약도서비스
+	* 한 페이지 내에 약도를 2개 이상 넣을 경우에는
+	* 약도의 수 만큼 소스를 새로 생성, 삽입해야 합니다.
+-->
+<!-- 1. 약도 노드 -->
+<div id="daumRoughmapContainer1636017023646" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+
+<!-- 2. 설치 스크립트 -->
 <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+
+<!-- 3. 실행 스크립트 -->
 <script charset="UTF-8">
 	new daum.roughmap.Lander({
-		"timestamp" : "1635489226571",
-		"key" : "27umn",
-		"mapWidth" : "1140",
-		"mapHeight" : "360"
+		"timestamp" : "1636017023646",
+		"key" : "27wvi",
+		"mapWidth" : "1000",
+		"mapHeight" : "300"
 	}).render();
 </script>
                     </div>
@@ -271,7 +283,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <ul class="d-flex justify-content-center">
+                    <ul class="d-flex justify-content-center mb-3">
                         <li class="px-3"><a href="#">사이트 맵</a></li>
                         <li class="px-3"><a href="#">이용약관</a></li>
                         <li class="px-3"><a href="#">개인정보처리방침</a></li>
@@ -280,7 +292,9 @@
                     </ul>
                 </div>
             </div>
-            <img src="images/logo.PNG" alt="">
+            <img src="images/logo.PNG" alt="" class="mb-3">
+            <p class="text-center">상호: 록시땅코리아 유한책임회사 | 사업자 등록 번호 211-87-74234 | 대표자 : 안드레조셉호프만 | 주소 : 서울특별시 강남구 테헤란로 87길 36(삼성동) 도심공항타워 21층(06164)
+                | 대표전화 : (02)2054-0500 | 대표메일 : LOCCITANE@LOCCITANE.CO.KR | 결제관련문의 : 1588-4954 | 주문관련문의 : (02)2054-0500 | 통신판매번호 : 2008-서울강남-0844 |</p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
