--- a/08fullpage/index.html
+++ b/08fullpage/index.html
@@ -53,6 +53,18 @@
              0% {opacity: 0;}
              100% {opacity: 1;}
          }
+         .section .view03 img{
+             position: absolute;
+             top: -100px; right: 100px; width: 200px; 
+             animation-name: dna;
+             animation-duration: 2s;
+             animation-iteration-count: infinite;
+             animation-direction: alternate;
+         }
+         @keyframes dna {
+             from {transform: skew(15deg, 15deg);}
+         }
+         .section .view03 {position: relative;}
          .navbar:hover {background: #fff;}
          .navbar .nav-item {padding: 0 20px;}
          .news {display: none;}
@@ -147,6 +159,9 @@
                         <div class="txt">
                             <h1><b>Highest Quality Biologics</b><br>Most Trusted Partner</h1>
                             <h3>품질을 최우선으로 여기는 회사</h3>
+                            <div class="container view03">
+                                <img src="images/w.png" alt="">
+                            </div>
                         </div>
                     </li>
                 </ul>
