--- a/08fullpage/index.html
+++ b/08fullpage/index.html
@@ -136,7 +136,7 @@
                     <div class="sliderWrap">
                         <ul class="slider">
                             <li>
-                                <img src="images/Rectangle 2.png" alt="" class="w-100">
+                                <img src="images/bg.png" alt="" class="w-100">
                                 <div class="txt">
                                     <h1><b>Fully Integrated CDMO</b><br>with End-to-End Serviceds</h1>
                                     <h3>단일 공장 세계 최대 규모의 위탁제조회사</h3>
@@ -146,7 +146,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/image 4.png" alt="" class="w-100">
+                                <img src="images/image4.png" alt="" class="w-100">
                                 <div class="txt">
                                     <h1><b>Better Life with</b><br>Samsung Biologics</h1>
                                     <h3>인간의 미래를 건강하게 만드는 회사</h3>
@@ -156,7 +156,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/image 6.png" alt="" class="w-100">
+                                <img src="images/image6.png" alt="" class="w-100">
                                 <div class="txt">
                                     <h1><b>Highest Quality Biologics</b><br>Most Trusted Partner</h1>
                                     <h3>품질을 최우선으로 여기는 회사</h3>
@@ -180,7 +180,26 @@
         </div>
         <div class="section page2" data-anchor="m2st">
             <div class="container view02">
-                
+                <div class="row">
+                    <div class="col-md-5 d-flex justify-content-around">
+                        <h3>What's New</h3>
+                        <ul class="sns d-flex">
+                            <li><img src="images/net21.png" alt=""></li>
+                            <li><img src="images/net22.png" alt=""></li>
+                            <li><img src="images/net23.png" alt=""></li>
+                            <li><img src="images/net24.png" alt=""></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/net58.jpg" alt="">
+                        <div class="box">
+                            <div class="txt">
+                                <h3>삼성바이오로직스, 바이오의약품 전문기업 최초 ESG 종합평가 'A등급' 획득</h3>
+                                <p>삼성바이오로직스(대표이사:존 림)가 한국기업지배구조원(KCGS)에서 발표한 '2021년 상장기업 ESG 평가 및 등급 공표'결과에서 전 부문 A등급 이상을 받으며, 바이오의약품 전문기업 최초로 종합평가 'A등급'을 획득했다고 1일(월)밝혔다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="section page3" data-anchor="m3st">
