--- a/08fullpage02/index.html
+++ b/08fullpage02/index.html
@@ -15,10 +15,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function(){
-            $(".slide").bxSlider({
-                auto:true,
-                pager:false
-            });
+           var myslide = $(".slide").bxSlider({
+               controls:false
+           })
             $(".nextBtn").click(function(){
                 myslide.goToNextSlide(); //bxsliderm public method option
             });
