--- a/04company/index.html
+++ b/04company/index.html
@@ -15,59 +15,62 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    
    <header id="header">
        <div class="headerWrap">
+           <h1 class="logo"><a href="#"><img src="images/vs2.png" alt=""></a></h1>
            <nav class="gnb">
                <ul class="mainMenu clearfix">
                    <li class="mainLi"><a href="#">강원FC</a>
-                       <ul class="subMenu">
+                       <!-- <ul class="subMenu">
                            <li class="subLi"><a href="sub1.html">구단소개</a></li>
                            <li class="subLi"><a href="#">유니폼</a></li>
                            <li class="subLi"><a href="#">클럽하우스</a></li>
                            <li class="subLi"><a href="#">자유게시판</a></li>
                            <li class="subLi"><a href="#">서포터즈</a></li>
                            <li class="subLi"><a href="#">주주확인</a></li>
-                       </ul>
+                       </ul> -->
                    </li>
                    <li class="mainLi"><a href="#">구단소식</a>
-                       <ul class="subMenu">
+                       <!-- <ul class="subMenu">
                            <li class="subLi"><a href="#">공지사항</a></li>
                            <li class="subLi"><a href="#">구단뉴스</a></li>
                            <li class="subLi"><a href="#">구단영상</a></li>
                            <li class="subLi"><a href="#">구단사진</a></li>
-                       </ul>
+                       </ul> -->
                    </li>
                    <li class="mainLi"><a href="#">선수단</a>
-                       <ul class="subMenu">
+                       <!-- <ul class="subMenu">
                            <li class="subLi"><a href="#">선수</a></li>
                            <li class="subLi"><a href="#">코칭스태프</a></li>
                            <li class="subLi"><a href="#">U-18</a></li>
                            <li class="subLi"><a href="#">U-15</a></li>
-                       </ul>
+                       </ul> -->
                    </li>
                    <li class="mainLi"><a href="#">스폰서</a>
-                       <ul class="subMenu">
+                       <!-- <ul class="subMenu">
                            <li class="subLi"><a href="#">공식스폰서</a></li>
                            <li class="subLi"><a href="#">후원의 집</a></li>
-                       </ul>
+                       </ul> -->
                    </li>
                    <li class="mainLi"><a href="#">경기/티켓</a>
-                       <ul class="subMenu">
+                       <!-- <ul class="subMenu">
                            <li class="subLi"><a href="#">경기일정</a></li>
                            <li class="subLi"><a href="#">구단순위</a></li>
                            <li class="subLi"><a href="#">티켓구매</a></li>
                            <li class="subLi"><a href="#">연간회원권&티켓북</a></li>
                            <li class="subLi"><a href="#">버스신청</a></li>
-                       </ul>
+                       </ul> -->
                    </li>
                    <li class="mainLi"><a href="#">사회공헌</a>
-                       <ul class="subMenu">
+                       <!-- <ul class="subMenu">
                            <li class="subLi"><a href="#">강웅이와 함께 으라차차</a></li>
                            <li class="subLi"><a href="#">축구클리닉</a></li>
                            <li class="subLi"><a href="#">방문팬미팅</a></li>
                            <li class="subLi"><a href="#">진로교육</a></li>
                            <li class="subLi"><a href="#">활동신청</a></li>
-                       </ul>
+                       </ul> -->
                    </li>
                </ul>
            </nav>
@@ -79,7 +82,7 @@
        </div>
        <div class="visualWrap">
         <ul class="visual">
-        <li><img src="images/visual.png" alt=""><h1><b>GREAT UNION</b></h1></li>
+        <li><img src="images/main_img01.png" alt=""></li>
         <li><img src="images/visual01.png" alt=""><h1><b>강원FC</b></h1></li>
         <li><img src="images/visual02.png" alt=""><h1><b>2021K-LEAGUE</b></h1></li>
      </ul>
@@ -271,7 +274,7 @@
         </ul>
     </div>
 </div>
-<div class="noticeWrap">
+<!-- <div class="noticeWrap">
     <h3>공지사항</h3>
 </div>
 <div class="article">
@@ -392,7 +395,7 @@
         </a>
      </li>
     </ul>
-</div>
+</div> -->
 <footer id="footer">
     <div class="topMenu">
         <ul class="footmenu clearfix">
