--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -281,7 +281,7 @@
     <div class="box row mb-5">
         <div class="col-md-10 offset-md-1">
             <div class="video">
-                <iframe src="https://www.youtube.com/watch?v=jR_7ordoU1Y" frameborder="0"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/jR_7ordoU1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h5 class="text-center">록시땅의 친환경 ECO MERCI 박스</h5>
                 <p class="text-center">록시땅 공식몰에서 주문하신 제품은 플라스틱 테이프와 완충제를 사용하지 않아 박스부터 포장지까지 100% 재활용이 가능한 포장박스로 배송됩니다.</p>
             </div>
