--- a/08fullpage/index.html
+++ b/08fullpage/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/fullpage.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/fullpage.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
     <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/jquery.bxslider.js"></script>
     <script src="../js/jquery.fullPage.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="../js/jquery.bxslider.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
     <style>
         html,body{height: 100vh;}
         .section {background-position: center; background-repeat: no-repeat; background-size: cover; text-align: center;}
@@ -47,7 +50,7 @@
          .section .view01 {transform: translateY(60vh);transition: 0.6s;}
          .section .view01.on {transform: translateY(0);}
          .section .view02 {
-             animation: opaTree 0.6s infinite alternate;
+             /* animation: opaTree 0.6s infinite alternate; */
          }
          @keyframes opaTree {
              0% {opacity: 0;}
@@ -81,19 +84,7 @@
                 navigation:true,
                 navigationPosition:"fp-right",
                 navigationTooltips:["About Us","What's New","Why Samsung","Useful Pages"],
-                responsiveWidth: 768,
-                afterLoad:function(anchorsLink,index){
-                    if(index == 1){ 
-                        $(".view01").addClass("on")
-                    }else{
-                        $(".view01").removeClass("on")
-                    }
-                    if(index == 2){
-                        $(".view02").addClass("on")
-                    }else{
-                        $(".view02").removeClass("on")
-                    }
-                }
+                responsiveWidth: 768
             })
         });
     </script>
@@ -130,9 +121,10 @@
     </nav>
 
     <div id="fullpage">
-        <div class="container">
-            <div class="row">
+        
                 <div class="section page1 " data-anchor="m1st">
+                    <div class="container">
+                        <div class="row">
                     <div class="sliderWrap">
                         <ul class="slider">
                             <li>
