--- a/08fullpage02/index.html
+++ b/08fullpage02/index.html
@@ -42,8 +42,8 @@
             // ///////////////////////////////////
             new Swiper('.swiper-container', {
 
-            slidesPerView : 4, // 동시에 보여줄 슬라이드 갯수
-            spaceBetween : 30, // 슬라이드간 간격
+            slidesPerView : 3, // 동시에 보여줄 슬라이드 갯수
+            spaceBetween : 5, // 슬라이드간 간격
             slidesPerGroup : 4, // 그룹으로 묶을 수, slidesPerView 와 같은 값을 지정하는게 좋음
 
             // 그룹수가 맞지 않을 경우 빈칸으로 메우기
@@ -241,14 +241,6 @@ navigation : { // 네비게이션
         <div class="section page1">
             <iframe width="100%" height="600" src="https://www.youtube.com/embed/ExBGvJPBn4o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="section page2">
-            <div class="container">
-                <div class="row">
-                    .col-md-
-                </div>
-            </div>
-        </div>
-        <!-- 클래스명은 변경하면 안 됨 -->
 <div class="swiper-container">
     <div style="text-align:center; margin-top:5px;">
         <h3>OUR MODELS</h3>
@@ -270,24 +262,38 @@ navigation : { // 네비게이션
 	<div class="swiper-wrapper">
 		<div class="swiper-slide">
             <img src="images/model01.webp">
+            <a href="#">자세히보기</a>
         </div>
 		<div class="swiper-slide">
+            <h6>G70</h6>
             <img src="images/model02.webp">
+            <a href="#">자세히보기</a>
         </div>
 		<div class="swiper-slide">
+            <h6>G80</h6>
             <img src="images/model03.webp">
+            <a href="#">자세히보기</a>
         </div>
 		<div class="swiper-slide">
+            <span>ELECTRIFIED</span>
+            <h6>G80</h6>
             <img src="images/model04.webp">
+            <a href="#">자세히보기</a>
         </div>
 		<div class="swiper-slide">
+            <h6>G90</h6>
             <img src="images/model05.webp">
+            <a href="#">자세히보기</a>
         </div>
 		<div class="swiper-slide">
+            <h6>GV60</h6>
             <img src="images/model06.webp">
+            <a href="#">자세히보기</a>
         </div>
 		<div class="swiper-slide">
+            <h6>GV70</h6>
             <img src="images/model07.webp">
+            <a href="#">자세히보기</a>
         </div>
 	</div>
 	<!-- 네비게이션 -->
