--- a/03traval/index.html
+++ b/03traval/index.html
@@ -91,47 +91,54 @@
             <div class="TopLeftcon">
                 <div class="reserv">
                     <ul>
-                        <li><a href="#"><i class="fas fa-plane"></i>공항예약</a></li>
-                        <li><a href="#"><i class="fas fa-hotel"></i>호텔예약</a></li>
-                        <li><a href="#"><i class="fas fa-car"></i>렌트카</a></li>
-                        <li><a href="#"><i class="fas fa-umbrella-beach"></i>휴양지</a></li>
+                        <li><a href="#">공항예약</a></li>
+                        <li><a href="#">호텔예약</a></li>
+                        <li><a href="#">렌트카</a></li>
+                        <li><a href="#">휴양지</a></li>
                     </ul>
-                    <div class="resChoose">
-                        <form action="#">
+                        <form action="#" class="form">
                             <fieldset>
+                                <legend class="blind">여행일정</legend>
                                 <ul>
                                     <li>
-                                        <label>가고싶은 나라를 선택하세요.</label><br>
-                                        <select name="country" id="country">
+                                        <label for="golo">가고싶은 나라를 선택하세요.</label>
+                                        <select name="golo" id="golo">
                                             <option value="">선택하세요</option>
                                             <option value="ko">한국</option>
                                             <option value="us">미국</option>
                                             <option value="ca">캐나다</option>
                                         </select>
                                     </li>
-                                    <li>
-                                      <label for="sdate">출발일</label>
-                                      <input type="date">
-                                      <label for="edate">도착일</label>
-                                      <input type="date">
+                                    <li class="clearfix">
+                                      <div class="left">
+                                          <label for="sdate">출발일</label>
+                                          <input type="date" id="sdate">
+                                      </div>
+                                      <div class="right">
+                                          <label for="edate">도착일</label>
+                                          <input type="date" id="edate">
+                                      </div>
                                     </li>
-                                    <li>
-                                        <label for="seat">좌석등급</label>
-                                        <select name="seat" id="seat">
-                                            <option value="aseat">일반석</option>
-                                            <option value="bseat">비즈니스석</option>
-                                            <option value="cseat">일등석</option>
-                                        </select>
-                                        <label for="adult">성인</label>
-                                        <input type="number" placeholder="1">
-                                        <label for="kids">아이</label>
-                                        <input type="number" placeholder="2">
+                                    <li class="clearfix">
+                                        <div class="left">
+                                            <label for="grade">좌석등급</label>
+                                            <select name="grade" id="grade">
+                                                <option value="">선택</option>
+                                                <option value="">비즈니스석</option>
+                                                <option value="">일등석</option>
+                                            </select>
+                                        </div>
+                                        <div class="right">
+                                            <label for="adult">성인</label>
+                                            <input type="number" id="" placeholder="1">
+                                            <label for="kids">아이</label>
+                                            <input type="number" id="" placeholder="2">
+                                        </div>
                                     </li>
                                 </ul>
-                                <button type="button"><i class="fas fa-search"></i>검색하기</button>
                             </fieldset>
+                            <input type="submit" value="검색하기">
                         </form>
-                    </div>
                 </div>
                 <div class="saletour">
                     <ul>
@@ -159,9 +166,7 @@
                 </div>
             </div>
         </div>
-<<<<<<< HEAD
         
-=======
         <div class="content2">
            <ul class="clearfix">
                <li>
@@ -245,7 +250,6 @@
               </a></li>
           </ul>  
         </div>
->>>>>>> 0ca963850c78a413b481a4e532810c0a9a3fdfad
     </div>
 </body>
 
