--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -29,7 +29,7 @@
       .product .txt {padding: 2px 20px;}
       .product .swiper-slide{position: relative;}
       .product .swiper-slide .txt {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);}
-      .video {transform: translateX(30%);}
+      /* .video {transform: translateX(30%);} */
       .aside p {font-size: 10px;}
       #footer li {font-size: 12px;}
       #footer li a {display: block;}
@@ -43,7 +43,7 @@
 <body>
     <header id="headerWrap" class="mb-xl-0 mb-lg-5" >
         <div class="container px-3 px-md-0">
-            <nav class="navbar navbar-expand-md navbar-light px-0">
+            <nav class="navbar navbar-expand-sm navbar-light px-0">
                 <a class="navbar-brand" href="index.html"><img src="images/logo.PNG" alt=""></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -165,9 +165,9 @@
         <div class="container">
             <h5 class="text-center mb-5">베스트 셀러</h5>
             <div class="row">
-                <div class="col-lg-10 d-flex col-md-5">
+                <div class="d-flex col-md-5 order-2 order-md-1">
                     <img src="images/bestsell.png" alt="" width="500px" class="img-fluid">
-                    <div class="txt">
+                    <div class="txt order-2 order-md-1">
                         <div class="t1">
                             <h6 class="text-center">NEW 이모르뗄 리셋 세럼</h6>
                             <p>10배 더 농축된 이모르뗄 에센셜 오일을 담은 NEW 리셋 세럼은 강력한 *항산화 효과로 피부 에너지 회복을 도와줍니다.</p>
